# bevy-quick-warrior

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  index.html
.github/workflows/: ci.yml  release.yml
assets/Art/Aseprite/: Axe.aseprite  Health.aseprite  KeyBinds.aseprite  Map.aseprite  Player-Attack.aseprite
src/: camera.rs  main.rs  physics.rs  score.rs
src/character/: collisions.rs  mod.rs
src/enemy/: mod.rs
src/level/: _temp.rs  mod.rs  spawner.rs
src/map/: mod.rs
src/player/: animations.rs  mod.rs
src/quick_event/: mod.rs  temp
src/ui/: game_over.rs  main_menu.rs  mod.rs  quick_event.rs  utils.rs
src/utils/: ecs.rs  mod.rs  vec2.rs
